--- a/package.json
+++ b/package.json
@@ -3,14 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@material-tailwind/react": "^2.1.4",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "flowbite": "^1.8.1",
+    "next": "^13.5.6",
     "react": "latest",
     "react-dom": "latest",
-    "next": "latest"
+    "react-icons": "^4.11.0",
+    "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
+    "sass": "^1.69.4",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^3.9.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
