--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev ",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,9 +16,9 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "flowbite": "^1.8.1",
-    "next": "^13.5.6",
-    "react": "latest",
-    "react-dom": "latest",
+    "next": "^14.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-slick": "^0.29.0",
     "react-transition-group": "^4.4.5",
@@ -29,7 +29,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "daisyui": "^3.9.3",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.5"
   }
 }
