--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,31 +5,30 @@ on:
     branches:
       - main
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install Node.js
-        uses: actions/setup-node@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          node-version: '18'
-      - name: Install dependencies
-        run: npm install
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWD }}
 
-      - name: Build Next.js app
-        run: npm run build
-
-      - name: Docker Login
-        run: echo "${{ secrets.DOCKER_PASSWD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin ${{ secrets.DOCKER_USERNAME }}
-
-      - name: Build Docker image
+      - name: Build and test
         run: |
           docker build -t dreamhome .
-          docker tag dreamhome ${{ secrets.DOCKER_USERNAME }}/dreamhome:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/dreamhome:latest
+          docker run dreamhome npm test
+
+      - name: Push image to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/dreamhome:${{ github.sha }}
 
       - name: SSH into server and deploy
         uses: appleboy/ssh-action@master
@@ -41,4 +40,4 @@ jobs:
             docker stop dreamhome || true
             docker rm dreamhome || true
             docker pull ${{ secrets.DOCKER_USERNAME }}/dreamhome:latest
-            docker run -d -p 3000:3000 --name dreamhome ${{ secrets.DOCKER_USERNAME }}/dreamhome:latest
+            docker run -d -p 80:3000 --name dreamhome ${{ secrets.DOCKER_USERNAME }}/dreamhome:${{ github.sha }}
