--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "flowbite": "^1.8.1",
+    "framer-motion": "^10.16.4",
     "next": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-slick": "^0.29.0",
+    "react-router-dom": "^6.18.0",
     "react-transition-group": "^4.4.5",
     "sass": "^1.69.4",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
