--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dream_home_next",
   "version": "0.1.0",
+  "proxy": "https://api.thedreamhome.click",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,16 +16,29 @@
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@react-google-maps/api": "^2.19.2",
+    "axios": "^1.6.2",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-encode": "^2.1.13",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
+    "filepond-plugin-image-validate-size": "^1.2.7",
     "flowbite": "^1.8.1",
     "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
     "next": "^14.0.1",
+    "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-filepond": "^7.1.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "react-transition-group": "^4.4.5",
+    "react-use-gesture": "^9.1.3",
     "sass": "^1.69.4",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "swiper": "^11.0.4",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
