--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.14",
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.6.2",
+    "axios-cookiejar-support": "^4.0.7",
     "filepond": "^4.30.4",
     "filepond-plugin-file-encode": "^2.1.13",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
@@ -26,7 +27,7 @@
     "flowbite": "^1.8.1",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
-    "next": "^14.0.1",
+    "next": "^14.0.3",
     "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
