--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flowbite": "^1.8.1",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "^14.0.3",
     "quill": "^1.3.6",
     "react": "^18.2.0",
