--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.462.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -17,14 +18,11 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@react-google-maps/api": "^2.19.2",
+    "@uppy/thumbnail-generator": "^3.0.6",
     "axios": "^1.6.2",
     "axios-cookiejar-support": "^4.0.7",
-    "filepond": "^4.30.4",
-    "filepond-plugin-file-encode": "^2.1.13",
-    "filepond-plugin-image-exif-orientation": "^1.0.11",
-    "filepond-plugin-image-preview": "^4.6.11",
-    "filepond-plugin-image-validate-size": "^1.2.7",
     "flowbite": "^1.8.1",
+    "flowbite-react": "^0.7.0",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -32,7 +30,6 @@
     "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-filepond": "^7.1.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "react-transition-group": "^4.4.5",
@@ -40,7 +37,8 @@
     "sass": "^1.69.4",
     "styled-components": "^6.1.0",
     "swiper": "^11.0.4",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "uppy": "^3.20.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
