--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@react-google-maps/api": "^2.19.2",
-    "@uppy/thumbnail-generator": "^3.0.6",
     "axios": "^1.6.2",
     "axios-cookiejar-support": "^4.0.7",
     "flowbite": "^1.8.1",
@@ -37,8 +36,7 @@
     "sass": "^1.69.4",
     "styled-components": "^6.1.0",
     "swiper": "^11.0.4",
-    "swr": "^2.2.4",
-    "uppy": "^3.20.0"
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
